--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "postinstall": "npx puppeteer install",
-    "build": "apt-get update && apt-get install -y chromium"
+    "build": "./render-build.sh"
   },
   "author": "",
   "license": "ISC",
